--- a/app/assets/stylesheets/style-preset.css
+++ b/app/assets/stylesheets/style-preset.css
@@ -14,6 +14,12 @@ h1,
 h2 {
   font-weight: 700;
 }
+input[type="text"]::placeholder {
+  color: #808080;
+}
+input[type="password"]::placeholder {
+  color: #808080;
+}
 
 :root {
   --bs-body-bg: #e9e9e9;
