--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -843,7 +843,7 @@ progress {
 }
 @media (min-width: 1200px) {
   .container-xl, .container-lg, .container-md, .container-sm, .container {
-    max-width: 1140px;
+    max-width: 90%;
   }
 }
 @media (min-width: 1400px) {
@@ -21351,13 +21351,13 @@ pre[class*=language-] > code {
 @media (min-width: 1200px) {
   .footer-wrapper.container,
   .pc-content.container {
-    max-width: 960px;
+    max-width: 90%;
   }
 }
 @media (min-width: 1400px) {
   .footer-wrapper.container,
   .pc-content.container {
-    max-width: 1140px;
+    max-width: 90%;
   }
 }
 
