--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -4,7 +4,7 @@
       .col-sm-auto
         .page-header-title
           h5.mb-0
-            = paginate @games
+            = paginate @games, window: 1, right: 1, left: 1
       .col-sm-auto
         ul.breadcrumb
           li.breadcrumb-item
