--- a/app/views/shared/_notification.html.slim
+++ b/app/views/shared/_notification.html.slim
@@ -21,7 +21,8 @@ li.dropdown.pc-h-item
             | Today
           .d-flex
             .flex-shrink-0
-              img.user-avtar.avtar.avtar-s[src="../assets2/images/user/avatar-2.jpg" alt="user-image"]
+              = image_tag  "avatar-2.jpg", class: "user-avtar avtar avtar-s"
+              
             .flex-grow-1.ms-3
               .d-flex
                 .flex-grow-1.me-3.position-relative
@@ -103,7 +104,7 @@ li.dropdown.pc-h-item
         li.list-group-item
           .d-flex
             .flex-shrink-0
-              img.user-avtar.avtar.avtar-s[src="../assets2/images/user/avatar-2.jpg" alt="user-image"]
+              = image_tag  "avatar-2.jpg", class: "user-avtar avtar avtar-s"
             .flex-grow-1.ms-3
               .d-flex
                 .flex-grow-1.me-3.position-relative
