--- a/app/views/shared/_profile.html.slim
+++ b/app/views/shared/_profile.html.slim
@@ -32,7 +32,7 @@ li.dropdown.pc-h-item.header-user-profile
               
               
           li.list-group-item
-            a.dropdown-item[href="#"]
+            =link_to pms_path, class: "dropdown-item" do |link|
               span.d-flex.align-items-center
                 i.ph-duotone.ph-envelope-simple
                 span
