--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,8 @@ html
     link href="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/css/smart_wizard_all.min.css" rel="stylesheet" type="text/css"
     script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"
     script src="https://cdn.jsdelivr.net/npm/smartwizard@6/dist/js/jquery.smartWizard.min.js" type="text/javascript"
-    
+    script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"
+    script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js" integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+" crossorigin="anonymous"
     
   body[data-pc-preset="preset-10" data-pc-sidebar-theme="dark" data-pc-sidebar-caption="true" data-pc-direction="ltr"  data-pc-theme="dark"]
     = render "shared/sidebar"
@@ -23,9 +24,9 @@ html
         = yield
         
     = render "shared/footer"
-    script src="/js/popper.min.js"
+    
     script src="/js/simplebar.min.js"
-    script src="/js/bootstrap.min.js"
+    
     script src="/js/pcoded.js"
     script src="/js/feather.min.js"
 
