--- a/app/views/pms/_form.html.slim
+++ b/app/views/pms/_form.html.slim
@@ -18,25 +18,19 @@
               i.ti.ti-info-circle.h2.f-w-400.mb-0
               .media-body.ms-3
                 |  Az üzenetek elküldése lehetőség, nem kötelező! Sértegetés, fenyegetőzés a felhasználó törlésével jár. 
-                
           .form-group
               = f.input :subject, placeholder: "Cím", input_html: { class: "form-control" }, label: false
           .form-group
             
-            = f.rich_text_area :desc,placeholder: "Üzenet", label: "szöveg", class:"form-control"
-              
-          .form-group.mb-0
-            .input-group.input-group-lg
-              span.input-group-text
-                | Large
-              = f.input :sender, input_html: { class: "form-control", type: "text" }, label: false
+            = f.rich_text_area :desc,placeholder: "Üzenet", label: "szöveg", class:"form-control", style: " height:400px !important", rows: 10
+          
         .card-footer.pt-0
-          button.btn.btn-primary
-            | Submit
+          button.btn.btn-primary.m-3
+            | Elküld
 
-            
-            button.btn.btn-secondary
-              | Cancel
+
+          = link_to pms_path , class: "btn btn-secondary"
+            |Mégse
         
 
 
