--- a/app/views/shared/_error.html.slim
+++ b/app/views/shared/_error.html.slim
@@ -1,14 +1,13 @@
-- if flash[:error].present? 
-    -flash[:error] = @user.errors.full_messages if @user.errors.any?
-    -if flash[:error].present? 
-        .alert.alert-primary
-            ul
-                -flash[:error].each do |error|
-                    li 
-                        h4
-                            = error
-- if flash[:notice]
-    .alert.alert-primary
-        =flash[:notice]
+- if flash[:error].present? && flash[:error].is_a?(Array)
+  .alert.alert-primary
+    ul
+      - flash[:error].each do |error|
+        li 
+          h4
+            = error
+- if flash[:notice].present?
+  .alert.alert-primary
+    = flash[:notice]
+
 
 
