--- a/app/views/games/show.html.slim
+++ b/app/views/games/show.html.slim
@@ -36,7 +36,7 @@
                                         li.list-group-item
                                             .media.align-items-center
                                                 = link_to  @game.link_epic, target: "_blank"  do |link| 
-                                                    img src="/assets/epic-games.svg" width="50px;"
+                                                    =image_tag("epic-games.svg")
                                                     
                                                 .media-body.ms-3
                                                     = link_to  @game.link_epic, target: "_blank"  do |link| 
@@ -278,7 +278,7 @@
                                                                                                                 = link_to support.link,class:"m-1 f-20   btn-sm", target: "_blank" do |link|
                                                                                                                     = raw(support.iconbootstrap)
 
-                                                                                                - if dorka.translater.pm && current_user && current_user.translater.id != dorka.translater.id
+                                                                                                - if dorka.translater.user.pm && current_user && current_user != dorka.translater
                                                                                                     .col-2.text
                                                                                                         h5.border-bottom.m-b-4
                                                                                                             = link_to  new_pm_path(translater: mikka.translater.slug) do 
@@ -417,7 +417,7 @@
                                                         span.badge.bg-info.m-2
                                                             | Fordító
                                                    
-                                                    - if gmes.user.translater.pm && current_user && gmes.user.translater.id != current_user.translater.id
+                                                    - if gmes.user.pm && current_user && gmes.user.translater != current_user.translater
                                                         =link_to "Pirvát üzenet", new_pm_path, class:"btn btn-sm btn-link"
                                                             
                                                             
