--- a/app/views/shared/_footer.html.slim
+++ b/app/views/shared/_footer.html.slim
@@ -1,19 +1,19 @@
 footer.pc-footer
     .footer-wrapper.container-fluid
       .row
-        .col.my-1
+        .col-1
           p.m-0
-            | Flat Able ♥ crafted by Team 
-            a[href="https://themeforest.net/user/phoenixcoded" target="_blank"]
-              | Phoenixcoded
-        .col-auto.my-1
-          ul.list-inline.footer-link.mb-0
-            li.list-inline-item
-              a[href="../index.html"]
-                | Home
-            li.list-inline-item
-              a[href="https://phoenixcoded.gitbook.io/flat-able-bootstrap/" target="_blank"]
-                | Documentation
-            li.list-inline-item
-              a[href="https://phoenixcoded.authordesk.app/" target="_blank"]
-                | Support
+            = link_to "Discord", "https://discord.gg/uhADYMbD5j", target: "_blank"
+        .col-1
+          p.m-0
+            = link_to "Facebook", "https://www.facebook.com/groups/2366748376888214", target: "_blank"
+        
+          
+        .col-auto
+          p.m-0
+            =link_to "Home",  root_path
+                
+            
+              
+               
+            
