--- a/app/views/users/settings.html.slim
+++ b/app/views/users/settings.html.slim
@@ -69,7 +69,7 @@
           
                 
           - if @user.translater_id?
-            .form-group.row
+            /.form-group.row
               label.col-form-label.col-sm-3.text-sm-end
                 
               .col-lg-6.col-sm-7
@@ -80,7 +80,7 @@
                   -else 
                     =f.check_box :pm, type: "checkbox", class: "form-check-input input-success"
 
-                  label.form-check-label[for="customswitchv2-3"]
+                  /label.form-check-label[for="customswitchv2-3"]
                     | Pm fogadás
             .form-group.row
               label.col-form-label.col-sm-3.text-sm-end
