--- a/app/views/shared/_sidebar.html.slim
+++ b/app/views/shared/_sidebar.html.slim
@@ -94,7 +94,7 @@ nav.pc-sidebar
               = link_to rss.link , class: "pc-link" do |link|
                   - path = URI.parse(rss.link.html_safe).path
                   - pathname = Pathname.new(path)
-                  li.pc-item.pt-2 title="#{pathname.basename.to_s.gsub("-"," ").upcase}" style="border-top: 1px solid green;"
+                  li.pc-item.border.border-white.tag.tag-typescript.border-1.rounded.rounded-3.p-2 title="#{pathname.basename.to_s.gsub("-"," ").upcase}" style="border-top: 1px solid green;"
                     b
                       = truncate(pathname.basename.to_s.gsub("-"," ").upcase, length:20, separator: "...")
                     br
@@ -122,7 +122,7 @@ nav.pc-sidebar
           
             -@uploading.each do |t|
               = link_to game_path(t.game), class: "pc-link" do |link|
-                li.pc-item.pt-2 style="border-top: 1px solid green;"
+                li.pc-item.border.border-white.tag.tag-typescript.border-1.rounded.rounded-3.p-2 style="border-top: 1px solid green;"
                 
                   =t.game.name
                   br
@@ -142,7 +142,7 @@ nav.pc-sidebar
           
             -@download.each do |t|
               = link_to  game_path(t.game), class: "pc-link" do |link|
-                li.pc-item.pt-2 style="border-top: 1px solid green;"
+                li.pc-item.border.border-white.tag.tag-typescript.border-1.rounded.rounded-3.p-2 style="border-top: 1px solid green;"
                   =t.game.name
                   br
                   |  (
