--- a/app/views/translaters/index.html.slim
+++ b/app/views/translaters/index.html.slim
@@ -15,8 +15,11 @@ table#pc-dt-simple.table.table-hover.datatable-table
         tr[data-index="0"]
         td
             .d-inline-block.align-middle
-                - if translater.user.present? && translater.user.photo.present?
-                    = image_tag translater.user.photo, class: "img-radius align-top m-r-15", style: "width: 50px;"
+                - if translater.user.present?
+                    - if translater.user.photo.present?
+                        = image_tag translater.user.photo, class: "img-radius align-top m-r-15", style: "width: 50px;"
+                    - else 
+                        = image_tag(user.gravatar_image(size: 200), class: "#{tag} wid-50 rounded-circle", alt: "user-image")
                 - else
                     = image_tag "avatar-2.jpg", class: "img-radius align-top m-r-15", style: "width: 50px;"
                 
