--- a/app/views/translaters/index.html.slim
+++ b/app/views/translaters/index.html.slim
@@ -22,7 +22,7 @@ table#pc-dt-simple.table.table-hover.datatable-table
                         = image_tag translater.user.photo, class: "img-radius align-top m-r-15", style: "width: 50px;"
                     - elsif translater.user.gravatar_image
                         - ix = 1
-                        = image_tag(translater.user.gravatar_image(size: 200), class: "#{tag} wid-50 rounded-circle", alt: "user-image")
+                        = image_tag(translater.user.gravatar_image(size: 200), class: " mg-radius align-top m-r-15", alt: "user-image")
                     - elsif ix ==0
                         = image_tag "avatar-2.jpg", class: "img-radius align-top m-r-15", style: "width: 50px;"
                 - else
