--- a/app/views/games/index.html.slim
+++ b/app/views/games/index.html.slim
@@ -32,7 +32,7 @@
                 - standard = "20px;"
               i.bi.bi-youtube.text-danger.p-1.f-20 title="Van bemutató videó"
             |   »
-          = image_tag(game.image.variant(resize_to_fill: [413, 237], crop: "413x237+0+0"), class: 'img-fluid', style: "object-fit: contain; position: relative;")
+          = image_tag(game.image.variant(resize_to_fill: [413, 237], crop: "413x237+0+0"), class: 'img-fluid rounded rounded-2', style: "object-fit: contain; position: relative;")
 
           
 
